fakedb/parser/SQLParser.py
# Generated from SQL.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class SQLParser ( Parser ):

    grammarFileName = "SQL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'CREATE'", "'DATABASE'", "'DROP'", 
                     "'SHOW'", "'DATABASES'", "'USE'", "'TABLES'", "'INDEXES'", 
                     "'LOAD'", "'FROM'", "'FILE'", "'TO'", "'TABLE'", "'DUMP'", 
                     "'('", "')'", "'DESC'", "'INSERT'", "'INTO'", "'VALUES'", 
                     "'DELETE'", "'WHERE'", "'UPDATE'", "'SET'", "'SELECT'", 
                     "'GROUP'", "'BY'", "'LIMIT'", "'OFFSET'", "'ALTER'", 
                     "'ADD'", "'INDEX'", "'PRIMARY'", "'KEY'", "'FOREIGN'", 
                     "'CONSTRAINT'", "'REFERENCES'", "'UNIQUE'", "','", 
                     "'NOT'", "'DEFAULT'", "'INT'", "'VARCHAR'", "'FLOAT'", 
                     "'AND'", "'IS'", "'IN'", "'LIKE'", "'.'", "'*'", "'='", 
                     "'<'", "'<='", "'>'", "'>='", "'<>'", "'COUNT'", "'AVG'", 
                     "'MAX'", "'MIN'", "'SUM'", "'NULL'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "EqualOrAssign", "Less", "LessEqual", "Greater", "GreaterEqual", 
                      "NotEqual", "Count", "Average", "Max", "Min", "Sum", 
                      "Null", "Identifier", "Integer", "String", "Float", 
                      "Whitespace", "Annotation" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_db_statement = 2
    RULE_io_statement = 3
    RULE_table_statement = 4
    RULE_select_table = 5
    RULE_alter_statement = 6
    RULE_field_list = 7
    RULE_field = 8
    RULE_type_ = 9
    RULE_value_lists = 10
    RULE_value_list = 11
    RULE_value = 12
    RULE_where_and_clause = 13
    RULE_where_clause = 14
    RULE_column = 15
    RULE_expression = 16
    RULE_set_clause = 17
    RULE_selectors = 18
    RULE_selector = 19
    RULE_identifiers = 20
    RULE_operator = 21
    RULE_aggregator = 22

    ruleNames =  [ "program", "statement", "db_statement", "io_statement", 
                   "table_statement", "select_table", "alter_statement", 
                   "field_list", "field", "type_", "value_lists", "value_list", 
                   "value", "where_and_clause", "where_clause", "column", 
                   "expression", "set_clause", "selectors", "selector", 
                   "identifiers", "operator", "aggregator" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    EqualOrAssign=52
    Less=53
    LessEqual=54
    Greater=55
    GreaterEqual=56
    NotEqual=57
    Count=58
    Average=59
    Max=60
    Min=61
    Sum=62
    Null=63
    Identifier=64
    Integer=65
    String=66
    Float=67
    Whitespace=68
    Annotation=69

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SQLParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SQLParser.StatementContext)
            else:
                return self.getTypedRuleContext(SQLParser.StatementContext,i)


        def getRuleIndex(self):
            return SQLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = SQLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << SQLParser.T__1) | (1 << SQLParser.T__3) | (1 << SQLParser.T__4) | (1 << SQLParser.T__6) | (1 << SQLParser.T__9) | (1 << SQLParser.T__14) | (1 << SQLParser.T__17) | (1 << SQLParser.T__18) | (1 << SQLParser.T__21) | (1 << SQLParser.T__23) | (1 << SQLParser.T__25) | (1 << SQLParser.T__30) | (1 << SQLParser.Null))) != 0) or _la==SQLParser.Annotation:
                self.state = 46
                self.statement()
                self.state = 51
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 52
            self.match(SQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def db_statement(self):
            return self.getTypedRuleContext(SQLParser.Db_statementContext,0)


        def io_statement(self):
            return self.getTypedRuleContext(SQLParser.Io_statementContext,0)


        def table_statement(self):
            return self.getTypedRuleContext(SQLParser.Table_statementContext,0)


        def alter_statement(self):
            return self.getTypedRuleContext(SQLParser.Alter_statementContext,0)


        def Annotation(self):
            return self.getToken(SQLParser.Annotation, 0)

        def Null(self):
            return self.getToken(SQLParser.Null, 0)

        def getRuleIndex(self):
            return SQLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = SQLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 70
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 54
                self.db_statement()
                self.state = 55
                self.match(SQLParser.T__0)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 57
                self.io_statement()
                self.state = 58
                self.match(SQLParser.T__0)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.table_statement()
                self.state = 61
                self.match(SQLParser.T__0)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 63
                self.alter_statement()
                self.state = 64
                self.match(SQLParser.T__0)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 66
                self.match(SQLParser.Annotation)
                self.state = 67
                self.match(SQLParser.T__0)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 68
                self.match(SQLParser.Null)
                self.state = 69
                self.match(SQLParser.T__0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Db_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SQLParser.RULE_db_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Show_dbsContext(Db_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Db_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShow_dbs" ):
                listener.enterShow_dbs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShow_dbs" ):
                listener.exitShow_dbs(self)


    class Drop_dbContext(Db_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Db_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDrop_db" ):
                listener.enterDrop_db(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDrop_db" ):
                listener.exitDrop_db(self)


    class Show_tablesContext(Db_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Db_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShow_tables" ):
                listener.enterShow_tables(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShow_tables" ):
                listener.exitShow_tables(self)


    class Create_dbContext(Db_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Db_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate_db" ):
                listener.enterCreate_db(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate_db" ):
                listener.exitCreate_db(self)


    class Use_dbContext(Db_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Db_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUse_db" ):
                listener.enterUse_db(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUse_db" ):
                listener.exitUse_db(self)


    class Show_indexesContext(Db_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Db_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShow_indexes" ):
                listener.enterShow_indexes(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShow_indexes" ):
                listener.exitShow_indexes(self)



    def db_statement(self):

        localctx = SQLParser.Db_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_db_statement)
        try:
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                localctx = SQLParser.Create_dbContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 72
                self.match(SQLParser.T__1)
                self.state = 73
                self.match(SQLParser.T__2)
                self.state = 74
                self.match(SQLParser.Identifier)
                pass

            elif la_ == 2:
                localctx = SQLParser.Drop_dbContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.match(SQLParser.T__3)
                self.state = 76
                self.match(SQLParser.T__2)
                self.state = 77
                self.match(SQLParser.Identifier)
                pass

            elif la_ == 3:
                localctx = SQLParser.Show_dbsContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 78
                self.match(SQLParser.T__4)
                self.state = 79
                self.match(SQLParser.T__5)
                pass

            elif la_ == 4:
                localctx = SQLParser.Use_dbContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 80
                self.match(SQLParser.T__6)
                self.state = 81
                self.match(SQLParser.Identifier)
                pass

            elif la_ == 5:
                localctx = SQLParser.Show_tablesContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 82
                self.match(SQLParser.T__4)
                self.state = 83
                self.match(SQLParser.T__7)
                pass

            elif la_ == 6:
                localctx = SQLParser.Show_indexesContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 84
                self.match(SQLParser.T__4)
                self.state = 85
                self.match(SQLParser.T__8)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Io_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SQLParser.RULE_io_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Dump_dataContext(Io_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Io_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def String(self):
            return self.getToken(SQLParser.String, 0)
        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDump_data" ):
                listener.enterDump_data(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDump_data" ):
                listener.exitDump_data(self)


    class Load_dataContext(Io_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Io_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def String(self):
            return self.getToken(SQLParser.String, 0)
        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoad_data" ):
                listener.enterLoad_data(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoad_data" ):
                listener.exitLoad_data(self)



    def io_statement(self):

        localctx = SQLParser.Io_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_io_statement)
        try:
            self.state = 102
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SQLParser.T__9]:
                localctx = SQLParser.Load_dataContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.match(SQLParser.T__9)
                self.state = 89
                self.match(SQLParser.T__10)
                self.state = 90
                self.match(SQLParser.T__11)
                self.state = 91
                self.match(SQLParser.String)
                self.state = 92
                self.match(SQLParser.T__12)
                self.state = 93
                self.match(SQLParser.T__13)
                self.state = 94
                self.match(SQLParser.Identifier)
                pass
            elif token in [SQLParser.T__14]:
                localctx = SQLParser.Dump_dataContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 95
                self.match(SQLParser.T__14)
                self.state = 96
                self.match(SQLParser.T__12)
                self.state = 97
                self.match(SQLParser.T__11)
                self.state = 98
                self.match(SQLParser.String)
                self.state = 99
                self.match(SQLParser.T__10)
                self.state = 100
                self.match(SQLParser.T__13)
                self.state = 101
                self.match(SQLParser.Identifier)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Table_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SQLParser.RULE_table_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class Delete_from_tableContext(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)
        def where_and_clause(self):
            return self.getTypedRuleContext(SQLParser.Where_and_clauseContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDelete_from_table" ):
                listener.enterDelete_from_table(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDelete_from_table" ):
                listener.exitDelete_from_table(self)


    class Insert_into_tableContext(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)
        def value_lists(self):
            return self.getTypedRuleContext(SQLParser.Value_listsContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInsert_into_table" ):
                listener.enterInsert_into_table(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInsert_into_table" ):
                listener.exitInsert_into_table(self)


    class Create_tableContext(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)
        def field_list(self):
            return self.getTypedRuleContext(SQLParser.Field_listContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreate_table" ):
                listener.enterCreate_table(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreate_table" ):
                listener.exitCreate_table(self)


    class Describe_tableContext(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDescribe_table" ):
                listener.enterDescribe_table(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDescribe_table" ):
                listener.exitDescribe_table(self)


    class Select_table_Context(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def select_table(self):
            return self.getTypedRuleContext(SQLParser.Select_tableContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_table_" ):
                listener.enterSelect_table_(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_table_" ):
                listener.exitSelect_table_(self)


    class Drop_tableContext(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDrop_table" ):
                listener.enterDrop_table(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDrop_table" ):
                listener.exitDrop_table(self)


    class Update_tableContext(Table_statementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SQLParser.Table_statementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def Identifier(self):
            return self.getToken(SQLParser.Identifier, 0)
        def set_clause(self):
            return self.getTypedRuleContext(SQLParser.Set_clauseContext,0)

        def where_and_clause(self):
            return self.getTypedRuleContext(SQLParser.Where_and_clauseContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUpdate_table" ):
                listener.enterUpdate_table(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUpdate_table" ):
                listener.exitUpdate_table(self)



    def table_statement(self):

        localctx = SQLParser.Table_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_table_statement)
        try:
            self.state = 134
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [SQLParser.T__1]:
                localctx = SQLParser.Create_tableContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(SQLParser.T__1)
                self.state = 105
                self.match(SQLParser.T__13)
                self.state = 106
                self.match(SQLParser.Identifier)
                self.state = 107
                self.match(SQLParser.T__15)
                self.state = 108
                self.field_list()
                self.state = 109
                self.match(SQLParser.T__16)
                pass
            elif token in [SQLParser.T__3]:
                localctx = SQLParser.Drop_tableContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 111
                self.match(SQLParser.T__3)
                self.state = 112
                self.match(SQLParser.T__13)
                self.state = 113
                self.match(SQLParser.Identifier)
                pass
            elif token in [SQLParser.T__17]:
                localctx = SQLParser.Describe_tableContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 114
                self.match(SQLParser.T__17)
                self.state = 115
                self.match(SQLParser.Identifier)
                pass
            elif token in [SQLParser.T__18]:
                localctx = SQLParser.Insert_into_tableContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 116
                self.match(SQLParser.T__18)
                self.state = 117
                self.match(SQLParser.T__19)
                self.state = 118
                self.match(SQLParser.Identifier)
                self.state = 119
                self.match(SQLParser.T__20)
                self.state = 120
                self.value_lists()
                pass
            elif token in [SQLParser.T__21]:
                localctx = SQLParser.Delete_from_tableContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 121
                self.match(SQLParser.T__21)
                self.state = 122
                self.match(SQLParser.T__10)
                self.state = 123
                self.match(SQLParser.Identifier)
                self.state = 124
                self.match(SQLParser.T__22)
                self.state = 125
                self.where_and_clause()
                pass
            elif token in [SQLParser.T__23]:
                localctx = SQLParser.Update_tableContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 126
                self.match(SQLParser.T__23)
                self.state = 127
                self.match(SQLParser.Identifier)
                self.state = 128
                self.match(SQLParser.T__24)
                self.state = 129
                self.set_clause()
                self.state = 130
                self.match(SQLParser.T__22)
                self.state = 131
                self.where_and_clause()
                pass
            elif token in [SQLParser.T__25]:
                localctx = SQLParser.Select_table_Context(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 133
                self.select_table()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Select_tableContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def selectors(self):
            return self.getTypedRuleContext(SQLParser.SelectorsContext,0)


        def identifiers(self):
            return self.getTypedRuleContext(SQLParser.IdentifiersContext,0)


        def where_and_clause(self):
            return self.getTypedRuleContext(SQLParser.Where_and_clauseContext,0)


        def column(self):
            return self.getTypedRuleContext(SQLParser.ColumnContext,0)


        def Integer(self, i:int=None):
            if i is None:
                return self.getTokens(SQLParser.Integer)
            else:
                return self.getToken(SQLParser.Integer, i)

        def getRuleIndex(self):
            return SQLParser.RULE_select_table

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSelect_table" ):
                listener.enterSelect_table(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSelect_table" ):
                listener.exitSelect_table(self)




    def select_table(self):

        localctx = SQLParser.Select_tableContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_select_table)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(SQLParser.T__25)
            self.state = 137
            self.selectors()
            self.state = 138
            self.match(SQLParser.T__10)
            self.state = 139
            self.identifiers()
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SQLParser.T__22:
                self.state = 140
                self.match(SQLParser.T__22)
                self.state = 141
                self.where_and_clause()


            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SQLParser.T__26:
                self.state = 144
                self.match(SQLParser.T__26)
                self.state = 145
                self.match(SQLParser.T__27)
                self.state = 146
                self.column()


            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==SQLParser.T__28:
                self.state = 149
                self.match(SQLParser.T__28)
                self.state = 150
                self.match(SQLParser.Integer)
                self.state = 153
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==SQLParser.T__29:
                    self.state = 151
                    self.match(SQLParser.T__29)
                    self.state = 152
                    self.match(SQLParser.Integer)




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Alter_statementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SQLParser.RULE_alter_statement
